[package]
name = "async-channel-abs"
version = "0.1.0"
authors = ["Thane Thomson <connect@thanethomson.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with-tokio = [ "tokio" ]
with-async-std = [ "async-channel", "async-std" ]

[dependencies]
async-trait = "0.1"
eyre = "0.6"
futures = "0.3"
thiserror = "1.0"

tokio = { version = "1.0", features = [ "macros", "net", "rt", "sync" ], optional = true }
async-channel = { version = "1.5", optional = true }
async-std = { version = "1.9", features = [ "attributes" ], optional = true }
